# metermachen

./: .dockerignore  .env.example  .env.homeserver.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  docker-compose.homeserver.yml  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
.github/workflows/: deploy.yml
backend/: bash.exe.stackdump  pyproject.toml
backend/app/: auth.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: achievements.py  activities.py  addons.py  auth_router.py  bets_router.py  categories.py  comparison.py  invites.py  seasons.py  strava_router.py  users.py
backend/app/services/: achievements.py  bet_metrics.py  bets.py  points.py  season_window.py  strava.py
backend/scripts/: strava_subscribe.py
backend/tests/: conftest.py  test_achievement_unlocks.py  test_achievements.py  test_activities.py  test_addons.py  test_auth.py  test_bet_metrics.py  test_bets_api.py  test_bets_lifecycle.py  test_bets_resolution.py  test_categories.py  test_comparison.py  test_comparison_seen.py  test_health.py  test_invites.py  test_migration.py  test_models.py  test_points.py  test_season_window.py  test_seasons.py  test_seed.py  test_strava.py  test_users.py
docs/: DEPLOY-homeserver.md  DEPLOY-netcup.html  DEPLOY-netcup.md  strava-review-antrag.md
docs/review/: sidebets-review.html
frontend/: bash.exe.stackdump  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/strava/: README.md
frontend/src/: App.tsx  index.css  main.tsx
(+96 files in other folders)
