[project]
name = "metermachen-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
